# DMCV

./: README.md  manage.py  pyproject.toml  useful cmd and infos.txt
Docs/: Travail de fin d'etudes.docx
app/: admin.py  forms.py  ml.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20210127_2130.py  0002_auto_20210128_2235.py  0002_auto_20210129_1852.py  0002_auto_20210131_1348.py  0002_auto_20210315_1628.py  0002_auto_20210315_2042.py  0002_auto_20210328_1351.py  0003_auto_20210128_2110.py  0003_auto_20210128_2154.py  0003_auto_20210129_1730.py  0003_auto_20210131_1456.py  0003_auto_20210328_1445.py  0004_auto_20210128_2127.py
app/static/css/: my-login.css  style.css
app/static/js/: bootstrap-table.js
app/static/ml/: Heart care ML.ipynb  heart_model.pickle
app/templates/: base.html  base_log.html  index.html
app/templates/profile/: full-screen-table.html  index.html  index1.html  rendezvous.html  report test.html  view_diagnostic.html
app/templates/registration test/: login.html
dia_mvc_app/: admin.py  apps.py  models.py
dia_mvc_app/migrations/: 0001_initial.py  0002_auto_20210102_1047.py
dia_mvc_management/: asgi.py  settings.py  urls.py  wsgi.py
dmcv_manager/: asgi.py  settings.py  urls.py  wsgi.py
dmvc_management/: asgi.py  settings.py  urls.py  wsgi.py
templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
(+2 files in other folders)
